# otus_homework

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
.github/workflow/: my_workflow.yml
.github/workflows/: build_and_test.yml  cmake.yml
src/: CMakeLists.txt
src/homework01/: CMakeLists.txt  solve.cpp
src/homework01/tests/: CMakeLists.txt  main.cpp  solve_tests.cpp
src/homework02/: CMakeLists.txt
src/homework02/src/: burn_fuel_command.cpp  burn_fuel_command.h  change_velocity_command.cpp  change_velocity_command.h  check_fuel_command.cpp  check_fuel_command.h  icommand.h  line_moving.cpp  line_moving.h  macro_command.cpp  macro_command.h  move_command.h  object.h  rotate_command.h
src/homework02/tests/: CMakeLists.txt  burn_fuel_command_test.cpp  change_velocity_command_test.cpp  check_fuel_command_test.cpp  macro_command_test.cpp  move_command_mock.h  rotate_command_mock.h
src/homework03/: CMakeLists.txt  movable_adapter.cpp  movable_adapter.h  move.cpp  move.h  object.cpp  object.h  rotable_adapter.cpp  rotable_adapter.h  rotate.cpp  rotate.h
src/homework03/tests/: CMakeLists.txt  movable_adapter_mock.h  move_test.cpp  object_mock.h  rotable_adapter_mock.h  rotate_test.cpp
src/homework04/: CMakeLists.txt  check_fuel_command.h  exception_handler.cpp  exception_handler.h  icommand.h  logger_command.cpp  logger_command.h  queue_command.cpp  queue_command.h  repeate_command.h
src/homework04/tests/: CMakeLists.txt  main.cpp  object_mock.h
src/homework05/: CMakeLists.txt  diagram.puml  factory.h  inserting_sort.h  merge_sort.cpp  merge_sort.h  selection_sorting.h  sorting_method.h
src/homework05/tests/: CMakeLists.txt  sorting_test.cpp
src/homework06/: CMakeLists.txt  adapter.cpp  adapter.h  adapter.puml  calculate_matrix.cpp  calculate_matrix.h  generate_matrix.cpp  generate_matrix.h
src/homework06/tests/: CMakeLists.txt  matrix_test.cpp
src/homework07/: CMakeLists.txt  command_executor.cpp  command_executor.h  command_soft_stop.h  command_thread_run.cpp  command_thread_run.h  commans_hard_stop.h  exception_handler.cpp  exception_handler.h  icommand.h  main.cpp
src/homework07/tests/: CMakeLists.txt  command_executor_test.cpp
src/homework08/: CMakeLists.txt  broker_message.h  command_executor.cpp  command_executor.h  icommand.h  interpret_command.cpp  interpret_command.h  move_command.h  object.h  rotate_command.h  type_def.h
src/homework08/tests/: CMakeLists.txt  interpret_command_test.cpp  main.cpp  move_command_mock.h  object_mock.h  rotate_command_mock.h
src/homework09/: CMakeLists.txt  broker_message.h  check_user_request.cpp  check_user_request.h  create_game_request.cpp  create_game_request.h  create_token_request.cpp  create_token_request.h  main.cpp  request.h  type_def.h
src/homework09/tests/: CMakeLists.txt  check_user_test.cpp  create_game_test.cpp  create_token_test.cpp  main.cpp  test_enviriment.h
src/homework10/: README.md  schema.puml
src/homework11/: CMakeLists.txt  command_executor.cpp  command_executor.h  default_state.cpp  default_state.h  icommand.h  move_to_state.cpp  move_to_state.h  state.cpp  state.h
src/homework11/tests/: CMakeLists.txt  command_executor_test.cpp
src/homework12/: CMakeLists.txt  contex.h  define_field_command.h  field.cpp  field.h  game_area.cpp  game_area.h  handler.h
src/homework12/tests/: CMakeLists.txt  command_test.cpp
